--- a/deep learning for computer vision/1-Linear Regression for Predicting Price of second hand Cars by Neuralearn.ai-.ipynb
+++ b/deep learning for computer vision/1-Linear Regression for Predicting Price of second hand Cars by Neuralearn.ai-.ipynb
@@ -909,7 +909,7 @@
         "outputId": "b19467b3-8e2f-4b9c-d6e4-e87c61409e68"
       },
       "source": [
-        "X_val = X[int(DATASET_SIZE*TRAIN_RATIO):int(DATASET_SIZE*(TRAIN_RATIO+VAL_RATIO))]\n",
+        "X_val = X[int(DATASET_SIZE*TRAIN_RATIO):int(DATASET_SIZE*(TRAIN_RATIO+VAL_RATIO))] #?????\n",
         "y_val = y[int(DATASET_SIZE*TRAIN_RATIO):int(DATASET_SIZE*(TRAIN_RATIO+VAL_RATIO))]\n",
         "print(X_val.shape)\n",
         "print(y_val.shape)"
@@ -930,11 +930,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "aBwRpaG0-urM",
-        "outputId": "149ecb69-9496-4a2d-c2bb-e9e49e81f88c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 391
-        }
+        },
+        "outputId": "149ecb69-9496-4a2d-c2bb-e9e49e81f88c"
       },
       "source": [
         "val_dataset = tf.data.Dataset.from_tensor_slices((X_val, y_val))\n",
@@ -1009,7 +1009,7 @@
       },
       "source": [
         "normalizer = Normalization()\n",
-        "normalizer.adapt(X_train)\n",
+        "normalizer.adapt(X_train) #only train\n",
         "normalizer(X)[:5]"
       ],
       "execution_count": null,
@@ -1301,6 +1301,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "history.history"
+      ],
+      "metadata": {
+        "id": "ofS-FT1YBHFb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1465,7 +1476,8 @@
         "outputId": "216ec721-9cee-4e6b-9c44-f813ffe214b8"
       },
       "source": [
-        "model.predict(tf.expand_dims(X_test[0], axis = 0 ))"
+        "model.predict(tf.expand_dims(X_test[0], axis = 0 ))\n",
+        "# 8 --> 1,8"
       ],
       "execution_count": null,
       "outputs": [
