--- a/deep learning for computer vision/1-Linear Regression for Predicting Price of second hand Cars by Neuralearn.ai-.ipynb
+++ b/deep learning for computer vision/1-Linear Regression for Predicting Price of second hand Cars by Neuralearn.ai-.ipynb
@@ -8,7 +8,8 @@
         "j6EtG3kpNKiT",
         "CxlimoToLc4C",
         "TSjCxq__LQkw"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -20,6 +21,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mariamahmed2/deep-learning-with-tensorflow-2/blob/main/deep%20learning%20for%20computer%20vision/1-Linear%20Regression%20for%20Predicting%20Price%20of%20second%20hand%20Cars%20by%20Neuralearn.ai-.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
